# pavex_mysql_sessions_demo

./: README.md
.cargo/: config.toml
app/: Cargo.toml
app/src/: blueprint.rs  configuration.rs  lib.rs
app/src/ops/: get.rs  get_struct.rs  insert.rs  mod.rs  remove.rs
configuration/: base.yml  dev.yml  prod.yml
migrations/: 20250622225850_add-sessions.sql
server/tests/integration/: helpers.rs
server_sdk/: Cargo.toml
server_sdk/src/: lib.rs
